new title and font ?

--- a/prototype.html
+++ b/prototype.html
@@ -6,6 +6,7 @@
 
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700italic,800,800italic,700' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Julius+Sans+One' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 
 	<!-- for more info on the line below, please check: http://www.w3schools.com/css/css_rwd_viewport.asp -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -57,7 +58,7 @@
 						 <path d="m47.124,30.667-43.935,0c-0.60105,0-1.0877,0.76152-1.0877,1.6877s0.48669,1.6877,1.0877,1.6877h43.938c0.6037,0,1.0877-0.76152,1.0877-1.6877s-0.48669-1.6877-1.0904-1.6877z" />
 						</svg>
 			
-					<h1 id="logo">GOOD NEWS</h1> 
+					<h1 id="logo">The Dutch Journal</h1> 
 					<span id="service">
 <!--SVG code for USER button-->
 <span id="user">
