styling lines corrected

--- a/prototype.html
+++ b/prototype.html
@@ -141,7 +141,7 @@
 <div class="tabContent" id="article">
 	<div id="heading-div-article">
 		<h2 id="headingArticle">ARTICLE</h2>
-		<hr class="lines">
+		<hr class="linesExSection">
    	</div>
 
  <div class="title-header">
@@ -378,7 +378,7 @@
 		
 		<h id="headingDiscussion">DISCUSSION</h>
 		<p class="artTitle">Where's the 'dislike' button?</p>		
-	<hr class="linesDis">	
+	<hr class="linesExSection">	
        
 
 	</div>
