toggle works explore

--- a/prototype.html
+++ b/prototype.html
@@ -342,8 +342,7 @@
 
 			<div id="worldTopics">
 					<hr class="linesEx">
-					<h2 class="subheaderExWorld">EXPLORE WORLD TOPICS
-						<span><i id='caret' class="fa fa-caret-left fa-2x" aria-hidden="true"></i></span>
+					<h2 class="subheaderExWorld">EXPLORE WORLD TOPICS<span><i id='caretWorld' class="fa fa-caret-left fa-2x" aria-hidden="true"><!--<i class="fa fa-caret-down fa-2x" aria-hidden="true"></i>--></i></span>
 					</h2>
 					<img class= 'worldtopics' src="images/worldtopics.png" alt="WorldTopics" />
 			</div>
