--- a/prototype.html
+++ b/prototype.html
@@ -363,7 +363,7 @@
 						<div class="TitleYin" id="TitleYin">
 								<h3>
 									<span id='year'> 2016 </span><span id="yearInNews"> Year in News </span>
-									<span><i id='caret' class="fa fa-caret-left fa-2x" aria-hidden="true"></i></span>
+									<span><i id='caretYin' class="fa fa-caret-left fa-2x" aria-hidden="true"></i></span>
 								</h3>
 						</div>
 
