adjusted svg in where tab of news update

--- a/prototype.html
+++ b/prototype.html
@@ -261,7 +261,34 @@
          </div>
 	</div>
 	<div class="tabUpdContent" id="where">
-		<span><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></span> <span><i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i></span> <span><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></span> <span><i class="fa fa-whatsapp fa-2x" aria-hidden="true"></i></span>
+		<span>
+			<!--Facebook SVG-->
+			<svg class="NewsUpdate-svg" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0" y="0" width="30" height="30" viewBox="0 0 470.51 470.51" >
+				<path style="stroke-width:0px; fill:#3b5998" d="M271.52 154.17v-40.54c0-6.09 0.28-10.8 0.85-14.13 0.57-3.33 1.86-6.61 3.86-9.85 2-3.24 5.24-5.47 9.71-6.71 4.48-1.24 10.42-1.86 17.85-1.86h40.54V0h-64.81c-37.5 0-64.43 8.9-80.8 26.69 -16.37 17.8-24.55 44.01-24.55 78.66v48.82h-48.54v81.09h48.54v235.26h97.36V235.26h64.81l8.57-81.09H271.52z"/></svg>
+			</span> 
+
+		<span>
+				<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+				<!-- envelope svg -->
+				<svg class="NewsUpdate-svg" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="30" width="30" viewBox="0 0 24 20" version="1.1" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
+				 
+				 <path d="M22.843,0.41c0-0.048-0.035-0.08-0.053-0.124-0.014-0.042-0.006-0.089-0.035-0.127-0.008-0.008-0.018-0.007-0.023-0.013-0.035-0.042-0.084-0.053-0.133-0.077-0.049-0.022-0.088-0.055-0.141-0.058-0.01-0.001-0.016-0.011-0.025-0.011h-22.023c-0.01,0-0.016,0.01-0.025,0.011-0.055,0.003-0.094,0.035-0.141,0.058-0.049,0.024-0.098,0.037-0.135,0.077-0.004,0.006-0.016,0.004-0.023,0.013-0.027,0.039-0.02,0.085-0.033,0.127-0.018,0.044-0.053,0.076-0.053,0.124v13.763c0,0.048,0.035,0.08,0.053,0.124,0.014,0.043,0.006,0.09,0.033,0.127,0.008,0.009,0.016,0.005,0.023,0.012,0.074,0.086,0.178,0.147,0.301,0.147h22.023c0.123,0,0.225-0.061,0.301-0.147,0.008-0.007,0.014-0.003,0.021-0.012,0.029-0.038,0.021-0.084,0.035-0.127,0.018-0.043,0.053-0.075,0.053-0.124z" />
+				 <path d="M0.13393,0.208,11.473,9.1812l11.25-9.0625" />
+				 <path d="M0,14.396,9.1562,7.333" />
+				 <path  d="M14.031,7.208,22.562,14.396" />
+				</svg>
+
+			</span> 
+		<!--Twitter SVG-->
+		<span><svg class="NewsUpdate-svg" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 194.666 194.666" xml:space="preserve" width="30" height="30" >
+		      		<path style="stroke-width:0px; fill:#6CDFEA" d="m64.213 177.752c-0.727 0-1.123-0.017-1.149-0.019-0.543 0.009-1.084 0.013-1.622 0.013-36.503 0-60.885-18.507-61.131-18.697-0.273-0.211-0.381-0.575-0.265-0.9 0.116-0.327 0.454-0.523 0.774-0.532 22.349 0.563 36.568-3.957 44.543-7.857 6.112-2.989 9.597-6.073 11.117-7.63-16.154-2.843-25.243-10.203-30.055-15.963-5.396-6.46-6.711-12.234-6.764-12.477-0.052-0.237 0.006-0.484 0.158-0.673 0.151-0.189 0.381-0.299 0.623-0.299l13.948 0C19.202 106.625 12.455 96.993 9.461 89.688 5.915 81.038 6.705 73.877 6.74 73.577c0.033-0.28 0.212-0.523 0.471-0.638 0.258-0.114 0.56-0.085 0.789 0.08 5.352 3.819 11.593 4.123 14.745 3.98C-4.267 56.541 11.707 24.247 11.874 23.917c0.121-0.238 0.353-0.4 0.618-0.432 0.268-0.032 0.529 0.071 0.703 0.273 39.276 45.915 75.079 42.257 80.458 41.397-1.188-11.787-0.312-27.774 10.119-38.555 6.412-6.626 13.312-8.096 13.603-8.155 27.652-5.936 45.22 7.131 48.013 9.403l23.129-9.36c0.269-0.109 0.575-0.064 0.8 0.117 0.227 0.181 0.337 0.47 0.289 0.756-1.296 7.763-9.71 15.652-14.044 19.263l18.159-3.346c0.348-0.065 0.705 0.113 0.862 0.435 0.158 0.322 0.083 0.71-0.185 0.949L173.36 55.485c0.514 8.233 1.522 26.759-6.82 46.556-17.209 40.838-44.409 59.244-64.195 67.494-18.326 7.641-33.875 8.217-38.132 8.217z"/>
+		      	</svg>
+		</span> 
+		<span><!--whatsapp svg-->
+		      	<svg class="NewsUpdate-svg" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 500 500" height="30" width="30" y="0px" x="0px" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
+					<path  style="stroke-width:0px; fill:#34af23" d="m19.89,452.5c-2.486,4.973,0,9.945,2.486,12.431,4.973,2.486,9.945,2.486,14.918,2.486l74.588-27.349c37.294,24.863,82.047,37.294,126.8,37.294,131.77,0,238.68-106.91,238.68-238.68s-106.9-238.68-238.68-238.68c-131.77,0-238.68,106.91-238.68,238.68,0,49.726,14.918,99.451,44.753,139.23z"/>
+					<path  style="stroke-width:0px;fill:white" d="m285.92,382.89c12.431,2.486,22.377,4.973,34.808,4.973,29.835,0,52.212-12.431,67.13-34.808,7.459-14.918,9.945-27.349,7.459-39.781-4.973-14.918-17.404-22.377-19.89-24.863l-37.294-19.89c-4.973-2.486-9.945-4.973-14.918-4.973-24.863,0-39.781,27.349-39.781,27.349s-2.486,2.486-7.459,2.486h-2.486c-37.294-12.431-64.643-47.239-77.075-64.643l-2.486-2.486c-9.945-7.459-12.431-7.459-2.486-17.404,19.89-17.404,14.918-37.294,9.945-44.753l-24.863-59.671c-2.486-4.973-12.431-12.431-22.377-12.431-12.431,0-27.349,7.459-44.753,24.863-42.267,42.267-9.945,106.91-9.945,106.91,47.239,124.31,181.5,156.64,186.47,159.12z"/>
+				</svg></span>
 		<button class="signUpdate">SIGN UP</button>
 	</div>
   </div>
