exchanged subscribe img with subscribe button

--- a/prototype.html
+++ b/prototype.html
@@ -428,7 +428,18 @@
 
    <div id="footer">
    	<ul>
-   		<li><img class="subscribe" src="images/html-subscribe.png" alt="subscribe"></li>
+   		<li><button class="subscribe">Subscribe 
+   			<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+					<!-- Created with Inkscape (http://www.inkscape.org/) -->
+					<svg id="subscribe-arrow" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="40" width="40" viewbox="0 0 18 18" version="1.1" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
+
+					 <path d="M0.5,5.8036,12.369,5.8667" />
+					 <path d="m7.3189,0.5,5.2402,5.3664-5.2887,5.3642"/>
+					</svg>
+
+
+
+   		</button>
    		<li>Follow us </li>
    		<li>
    			<!--Twitter svg-->
