adjusted the login pop up window and added it to the personal explore section

--- a/prototype.html
+++ b/prototype.html
@@ -378,9 +378,9 @@
 		</div><!-- end #tab1 -->
 
 		<div class="tabIntContent" id="tab2">
-			<div id="logIn">
-				<img src="images/login.png" alt="logIn">
-			</div>
+			<!--<div id="logIn">
+				<!--<img src="images/login.png" alt="logIn"> </div>-->
+		
 
 				    <img src="images/addpersonalexplore.png" alt="Add">
 
