--- a/prototype.html
+++ b/prototype.html
@@ -414,14 +414,17 @@
 		<h id="headingDiscussion">DISCUSSION</h>
 
 		<p class="artTitle">Where's the 'dislike' button?</p>		
-	<hr class="linesExSection">	
+		<hr class="linesExSection">	
        
+	<!-- Trending Voices -->
+		<h2 id="presult"> Poll Results </h2>
+		<span class="resultsNo" id="No" >
+			<p id="left">67% No</p>
+			<p id="right"> 33% Yes</p>
+		</span>
 		
-
-	</div>
-
-
-		<img src="images/html-comments-01.png" alt="Discussion">
+		<img src="images/commentsonly.png" alt="CommentsDiscussion">
+		
 
 	</div><!-- end #discussion -->
 
