css lines amin article and discussion

--- a/prototype.html
+++ b/prototype.html
@@ -220,14 +220,17 @@
 </div>
 
   <div id="relatedArticles">
-  	<hr id="related-lines">
-  	<img class= "relatedArticles" src="images/relatedarticles.png" alt="relatedArticles">
+  	<hr id="related-lines">  
+
+  	<h id="RelArt">Related Articles</h>
+  	<br>
+  	<img class= "relatedArticles" src="images/relatedArticles.png" alt="relatedArticles">
   </div>
 
 
 <div id="newsUpdate">
-	<hr class="lines">
-	<span class="subheader">Get Personalized News Updates</span>
+	<hr class="linesUpdate">
+	<span class="subheaderUpdate">Get Personalized News Updates</span>
 	<p id="newUpdateText">Select your preferred topics, the day you would like to receive the updates, and in which medium.</p>
 	<ul class="updateTabs">
 		<li class="selected"><a href="#what">What</a></li>
@@ -416,7 +419,8 @@
 		<p class="artTitle">Where's the 'dislike' button?</p>		
 		<hr class="linesExSection">	
        
-	<!-- Trending Voices -->
+		<img src="images/trendingv.png" alt="TrendingDiscussion">
+		
 		<h2 id="presult"> Poll Results </h2>
 		<span class="resultsNo" id="No" >
 			<p id="left">67% No</p>
@@ -439,10 +443,8 @@
 					 <path d="M0.5,5.8036,12.369,5.8667" />
 					 <path d="m7.3189,0.5,5.2402,5.3664-5.2887,5.3642"/>
 					</svg>
-
-
-
    		</button>
+
    		<li>Follow us </li>
    		<li>
    			<!--Twitter svg-->
@@ -476,7 +478,6 @@
    	</ul>
    </div>
 
-	<!--<p id="footer"><img src="images/footer.png" alt="Footer"></p>-->
 
 
 </div><!-- end #content -->
