--- a/prototype.html
+++ b/prototype.html
@@ -222,8 +222,8 @@
   <div id="relatedArticles">
   	<hr id="related-lines">  
 
-  	<h id="RelArt">Related Articles</h>
-  	<br>
+  	<!-- <h id="RelArt">Related Articles</h> -->
+  	
   	<img class= "relatedArticles" src="images/relatedArticles.png" alt="relatedArticles">
   </div>
 
@@ -295,8 +295,6 @@
 	</div>
   </div>
 </div>
-
-
 
 
 <!-- Begin of the share function -->
@@ -432,6 +430,13 @@
 		</div>
 	</div><!-- end #discussion -->
 
+
+<!-- Beginning of the banner function -->
+	<div id="banner">
+			<p class="textBanner">Log in to view your 'Year in News' and personalize your own 'Explore'!</p>
+	</div>
+
+<!-- Beginning of the footer -->
 
    <div id="footer">
    	<ul>
