--- a/prototype.html
+++ b/prototype.html
@@ -156,14 +156,24 @@
 
 <!--SVG for the audio button ' listen to the article'-->
 		<span class= "options" id="listen" >
+		<span id="off" class="listen-switch">	
 		  <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-					<!-- Created with Inkscape (http://www.inkscape.org/) -->
 					<svg  xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="30" width="30"  viewbox="0 0 30 30" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
-					  <path  d="m10.737,0.55078c-0.129-0.072-0.287-0.072-0.414,0.008l-6.782,4.07h-2.64c-0.227,0-0.41,0.184-0.41,0.409v5.505c0,0.226,0.184,0.41,0.41,0.41h2.639l6.784,4.07c0.064,0.039,0.138,0.059,0.21,0.059,0.069,0,0.14-0.018,0.202-0.053,0.129-0.074,0.208-0.211,0.208-0.357v-13.764c0.001-0.146-0.078-0.282-0.207-0.357z" />
-					 <path d="m12.768,3.43c1.4505,3.0655,1.8715,6.131,0,9.1964" />
-					 	<path  d="m3.1698,4.9925,0,5.8482" />
+					  <path  d="m10.746,2.3376c-0.129-0.072-0.287-0.072-0.414,0.008l-6.782,4.07h-2.64c-0.227,0-0.41,0.184-0.41,0.409v5.505c0,0.226,0.184,0.41,0.41,0.41h2.639l6.784,4.07c0.064,0.039,0.138,0.059,0.21,0.059,0.069,0,0.14-0.018,0.202-0.053,0.129-0.074,0.208-0.211,0.208-0.357v-13.764c0.001-0.146-0.078-0.282-0.207-0.357z"/>
+					 <path  d="m3.1788,6.7793,0,5.8482" />
 					</svg>
-				</span>
+		</span>
+		<span id="on"> <!-- svg with the volume up elements-->
+			<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+					<svg height="30" width="30"  viewbox="0 0 30 30" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">			 
+					 <path style="fill:#008080;" d="m10.746,2.3376c-0.129-0.072-0.287-0.072-0.414,0.008l-6.782,4.07h-2.64c-0.227,0-0.41,0.184-0.41,0.409v5.505c0,0.226,0.184,0.41,0.41,0.41h2.639l6.784,4.07c0.064,0.039,0.138,0.059,0.21,0.059,0.069,0,0.14-0.018,0.202-0.053,0.129-0.074,0.208-0.211,0.208-0.357v-13.764c0.001-0.146-0.078-0.282-0.207-0.357z"/>
+					 <path  d="m12.777,5.2168c1.4505,3.0655,1.8715,6.131,0,9.1964" />
+					 <path  d="m3.1788,6.7793,0,5.8482" />
+					 <path  d="m14.996,2.0785c0.72525,1.5328,2.333,4.0071,2.4682,7.0102,0.13523,3.003-1.4664,6.6669-2.4022,8.1996"/>
+					 <path d="m17.639,0.5c1.1878,1.4667,2.306,3.8594,2.6168,4.9947,0.08264,0.30185,0.45652,1.9751,0.46915,3.6563s-0.22033,3.3374-0.32691,3.8032c-0.32733,1.4308-1.6304,4.9627-2.0983,5.7291" />
+					</svg>
+			</span>
+			</span>
 			<span class= "options"  id="saveLater">
 <!-- SVG for the save for later button-->
 		  <?xml version="1.0" encoding="UTF-8" standalone="no"?>
@@ -452,7 +462,7 @@
 		      		<path d="m64.213 177.752c-0.727 0-1.123-0.017-1.149-0.019-0.543 0.009-1.084 0.013-1.622 0.013-36.503 0-60.885-18.507-61.131-18.697-0.273-0.211-0.381-0.575-0.265-0.9 0.116-0.327 0.454-0.523 0.774-0.532 22.349 0.563 36.568-3.957 44.543-7.857 6.112-2.989 9.597-6.073 11.117-7.63-16.154-2.843-25.243-10.203-30.055-15.963-5.396-6.46-6.711-12.234-6.764-12.477-0.052-0.237 0.006-0.484 0.158-0.673 0.151-0.189 0.381-0.299 0.623-0.299l13.948 0C19.202 106.625 12.455 96.993 9.461 89.688 5.915 81.038 6.705 73.877 6.74 73.577c0.033-0.28 0.212-0.523 0.471-0.638 0.258-0.114 0.56-0.085 0.789 0.08 5.352 3.819 11.593 4.123 14.745 3.98C-4.267 56.541 11.707 24.247 11.874 23.917c0.121-0.238 0.353-0.4 0.618-0.432 0.268-0.032 0.529 0.071 0.703 0.273 39.276 45.915 75.079 42.257 80.458 41.397-1.188-11.787-0.312-27.774 10.119-38.555 6.412-6.626 13.312-8.096 13.603-8.155 27.652-5.936 45.22 7.131 48.013 9.403l23.129-9.36c0.269-0.109 0.575-0.064 0.8 0.117 0.227 0.181 0.337 0.47 0.289 0.756-1.296 7.763-9.71 15.652-14.044 19.263l18.159-3.346c0.348-0.065 0.705 0.113 0.862 0.435 0.158 0.322 0.083 0.71-0.185 0.949L173.36 55.485c0.514 8.233 1.522 26.759-6.82 46.556-17.209 40.838-44.409 59.244-64.195 67.494-18.326 7.641-33.875 8.217-38.132 8.217z"/>
 		      	</svg>
 		      	<!--whatsapp svg-->
-		      	<svg class="footer-svg" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 500 500" height="30" width="30" y="0px" x="0px" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
+		      	<svg class="footer-svg" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 500 470" height="30" width="30" y="0px" x="0px" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
 					<path  style="stroke-width:11px" d="m19.89,452.5c-2.486,4.973,0,9.945,2.486,12.431,4.973,2.486,9.945,2.486,14.918,2.486l74.588-27.349c37.294,24.863,82.047,37.294,126.8,37.294,131.77,0,238.68-106.91,238.68-238.68s-106.9-238.68-238.68-238.68c-131.77,0-238.68,106.91-238.68,238.68,0,49.726,14.918,99.451,44.753,139.23z"/>
 					<path  style="stroke-width:11px" d="m285.92,382.89c12.431,2.486,22.377,4.973,34.808,4.973,29.835,0,52.212-12.431,67.13-34.808,7.459-14.918,9.945-27.349,7.459-39.781-4.973-14.918-17.404-22.377-19.89-24.863l-37.294-19.89c-4.973-2.486-9.945-4.973-14.918-4.973-24.863,0-39.781,27.349-39.781,27.349s-2.486,2.486-7.459,2.486h-2.486c-37.294-12.431-64.643-47.239-77.075-64.643l-2.486-2.486c-9.945-7.459-12.431-7.459-2.486-17.404,19.89-17.404,14.918-37.294,9.945-44.753l-24.863-59.671c-2.486-4.973-12.431-12.431-22.377-12.431-12.431,0-27.349,7.459-44.753,24.863-42.267,42.267-9.945,106.91-9.945,106.91,47.239,124.31,181.5,156.64,186.47,159.12z"/>
 				</svg>
@@ -465,16 +475,14 @@
    		<li>Imprint</li>
    		<li>Terms and Conditions</li>
    		<li>About</li>
-   		<br>
-   		<br>
-   		<br>
-   		<br>
-     	 <li>Made with
+   		<li id="love">Made with
    			<?xml version="1.0" encoding="UTF-8" standalone="no"?> 
 				 <!-- Created with Inkscape (http://www.inkscape.org/) -->
-				<svg class="footer-svg" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="30" width="30" viewbox="0 0 25 25" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
+				<svg class="footer-svg" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="20" width="20" viewbox="0 0 23 25" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
 				 <path d="M16.152,0.5c-1.505,0-3.001,1.394-4.23,2.242-1.215-0.838-2.62-2.242-4.102-2.242-1.955,0-3.792,0.762-5.172,2.144-1.385,1.385-2.148,3.227-2.148,5.185,0,1.959,0.764,3.801,2.129,5.165l9.356,10.688,9.339-10.668c2.859-2.858,2.859-7.51,0.002-10.369-1.382-1.383-3.22-2.145-5.174-2.145z" style="stroke-width:1px;"/>
 				</svg> in Amsterdam</li>
+		<li>   </li>
+		<li>   </li>
    	</ul>
    </div>
 
