added the #backtotop link to the element

--- a/prototype.html
+++ b/prototype.html
@@ -49,6 +49,7 @@
 <body>
 	<nav class="top"> <!-- Here: hamburger button & LOGO -->
 			<div class="header">
+
 <!--hamburger svg-->
 				<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 						<!-- Created with Inkscape (http://www.inkscape.org/) -->
@@ -143,7 +144,7 @@
 
 <!-- Here: CONTENT-->
 <div class="content">
-
+<a name="top"></a>
 <div class="tabContent" id="article">
 	<div id="heading-div-article">
 		<h2 id="headingArticle">ARTICLE</h2>
@@ -500,10 +501,12 @@
 	<div id="comment">
 		<img src="images/html-comments-share thoughts02.png" alt="shareThoughts">
 	</div>
-
+<a  href="#top">
 	<div id="backtotop">
-		<i class="fa fa-angle-double-up fa-lg" aria-hidden="true"></i> <!-- Here: ARROWS UP BUTTON -->
+		<i class="fa fa-angle-double-up fa-lg" aria-hidden="true"></i> 
+		<!-- Here: ARROWS UP BUTTON -->
 	</div>
+	</a>
 
 
 
