--- a/prototype.html
+++ b/prototype.html
@@ -141,8 +141,11 @@
 			<button class="loginbutton">Log In</button>
 		</div>-->
 
+
+
 <!-- Here: CONTENT-->
 <div class="content">
+
 
 <div class="tabContent" id="article">
 	<div id="heading-div-article">
@@ -390,7 +393,7 @@
 
 		<div class="tabIntContent" id="tab2">
 			<!--<div id="logIn">
-				<!--<img src="images/login.png" alt="logIn"> </div>-->
+				<img src="images/login.png" alt="logIn"> </div>-->
 		
 
 				    <img src="images/addpersonalexplore.png" alt="Add">
@@ -441,11 +444,6 @@
 	</div><!-- end #discussion -->
 
 
-<!-- Beginning of the banner function -->
-	<div id="banner">
-			<p class="textBanner">Log in to view your 'Year in News' and personalize your own 'Explore'!</p>
-	</div>
-
 <!-- Beginning of the footer -->
 
    <div id="footer">
@@ -495,18 +493,22 @@
 
 </div><!-- end #content -->
 
-
+	
 
 	<div id="comment">
 		<img src="images/html-comments-share thoughts02.png" alt="shareThoughts">
 	</div>
 
+
 	<div id="backtotop">
 		<i class="fa fa-angle-double-up fa-lg" aria-hidden="true"></i> <!-- Here: ARROWS UP BUTTON -->
 	</div>
 
-
-
+<!-- Beginning of the banner function -->
+	<div id="banner">
+			<p class="textBanner">Log in to view your 'Year in News' and personalize your own 'Explore'!</p>
+	</div>
+	
 
 <!--<script>
     $(document).ready(function(){
