fixed img related articles

--- a/prototype.html
+++ b/prototype.html
@@ -138,10 +138,7 @@
 		</div><!-- end .navigation -->
 	</nav><!-- end .top -->
 
-		<!--<div class="login">
-			<button class="loginbutton">Log In</button>
-		</div>-->
-
+		
 <!-- Here: CONTENT-->
 <div class="content">
 <a name="top"></a>
@@ -235,7 +232,7 @@
 
   	<!-- <h id="RelArt">Related Articles</h> -->
   	
-  	<img class= "relatedArticles" src="images/relatedArticles.png" alt="relatedArticles">
+  	<img class= "relatedArticles" src="images/relatedarticles.png" alt="relatedArticles">
   </div>
 
 
