--- a/prototype.html
+++ b/prototype.html
@@ -508,9 +508,8 @@
 
 <!-- Beginning of the banner function -->
 	<div id="banner">
-			<p class="textBanner">Log in to view your 'Year in News' and personalize your own 'Explore'!</p>
+	<p>Log in to view your 'Year in News' and personalize your own 'Explore'!</p>
 	</div>
-	
 
 <!--<script>
     $(document).ready(function(){
