css js banner final

--- a/prototype.html
+++ b/prototype.html
@@ -507,9 +507,9 @@
 	</a>
 
 <!-- Beginning of the banner function -->
-	<div id="banner">
-	<p>Log in to view your 'Year in News' and personalize your own 'Explore'!</p>
-	</div>
+	
+	<p id="banner">Log in to view your 'Year in News' and personalize your own 'Explore'!</p>
+	
 
 <!--<script>
     $(document).ready(function(){
