--- a/prototype.html
+++ b/prototype.html
@@ -447,7 +447,7 @@
 
    <div id="footer">
    	<ul>
-   		<li><button class="subscribe">Subscribe 
+   		<li><button class="subscribe">SUBSCRIBE NOW <br> TO THE DUTCH JOURNAL! <br> View All Print + Digital Pack Offers
    			<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 					<!-- Created with Inkscape (http://www.inkscape.org/) -->
 					<svg id="subscribe-arrow" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="40" width="40" viewbox="0 0 18 18" version="1.1" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
