working on Trending voices - simple animation as first version

--- a/prototype.html
+++ b/prototype.html
@@ -382,10 +382,7 @@
 		</div><!-- end #tab1 -->
 
 		<div class="tabIntContent" id="tab2">
-			<!--<div id="logIn">
-				<img src="images/login.png" alt="logIn"> </div>-->
-
-
+			
 				    <img src="images/addpersonalexplore.png" alt="Add">
 
 				<div id="sortable">
@@ -420,7 +417,20 @@
 		<p class="artTitle">Where's the 'dislike' button?</p>
 		<hr class="linesExSection">
 
-		<img src="images/trendingv.png" alt="TrendingDiscussion">
+  <h id="hedingTrendingVoices">Trending Voices</h>
+  <div id="container-div-trending-voices">
+    <div id="trending-voices-div" >
+    	<img src="images/voice-1.png" alt="TrendingDiscussion">
+    	<img src="images/voice-2.png" alt="TrendingDiscussion">
+    	<img src="images/voice-3.png" alt="TrendingDiscussion">
+    	<img src="images/voice-2.png" alt="TrendingDiscussion">
+    	<img src="images/voice-1.png" alt="TrendingDiscussion">
+    </div>
+  </div>
+
+
+
+		<!--<img src="images/trendingv.png" alt="TrendingDiscussion">-->
 
 		<h2 id="presult"> Poll Results </h2>
 		<span class="resultsNo" id="No" >
