--- a/prototype.html
+++ b/prototype.html
@@ -180,7 +180,20 @@
 <div id="mainArticlePage">
 		<div id="paginated-content">
 			<p class="lead">Facebook messes with our minds; Facebook's 'emotional contagion' experiment makes users really mad</p>
-			<p>What was going on in your Facebook news feed the week of Jan. 11-18, 2012? Birthday reminders, cat videos, crockpot recipes, baby pictures and invitations to play Bejeweled Blitz, probably, plus lots of current events posts were guaranteed to make you glad or mad. That week, Mitt Romney won New Hampshire's Republican primary, Playboy announced it was leaving Chicago, and Hostess filed for bankruptcy, prompting fears that there would be no more Twinkies. The Patriots knocked the Broncos out of the NFL playoffs, putting an end to Tebowmania. Snowfall in an otherwise mild winter, Derrick Rose was out with a sprained toe, and your crazy cousin was picking fights with anyone who commented on any of it. If you were one of nearly 700,000 randomly selected Facebook users, though, your feed might have contained a little less to "like." Or dislike. For years, Facebook has ignored pleas to add a clickable thumbs-down icon. Maybe this is why.That week, Facebook conducted a little experiment. Its robots trolled the news feeds of the users in that sample, tinkered with them to reduce the number of positive or negative posts, then studied the users' own entries for signs of "emotional contagion." They wanted to see if reducing the positives (or negatives) in your news feed made you feel less positive (or negative).</p>
+			<p>What was going on in your Facebook news feed the week of Jan. 11-18, 2012? Birthday reminders, cat videos, crockpot recipes, baby pictures and invitations to play Bejeweled Blitz, probably, plus lots of current events posts were guaranteed to make you glad or mad. That week, Mitt Romney won New Hampshire's Republican primary, Playboy announced it was leaving Chicago, and Hostess filed for bankruptcy, prompting fears that there would be no more Twinkies. The Patriots knocked the Broncos out of the NFL playoffs, putting an end to Tebowmania. Snowfall in an otherwise mild winter, Derrick Rose was out with a sprained toe, and your crazy cousin was picking fights with anyone who commented on any of it. If you were one of nearly 700,000 randomly selected Facebook users, though, your feed might have contained a little less to "like." Or dislike.</p>
+
+			<p> Don't want to miss your must-read articles? Sign up today to get your PERSONAL NEWS UPDATES!<span class="link-check-update">
+					<!-- SVG Code for the arrow in the News Update box -->
+					<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+					<svg xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="30" width="30"  viewbox="0 0 30 30" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
+					  <path d="M12.131,0.501,11.918,0.5c-6.184,0-11.303,5.03-11.416,11.212-0.057,3.051,1.08,5.938,3.197,8.135,2.119,2.196,4.965,3.438,8.016,3.492l0.213,0.002h0.002c6.18,0,11.297-5.03,11.414-11.212,0.111-6.3-4.918-11.516-11.213-11.628z" />
+					 <path  d="m5.2351,11.914,11.869,0.0631" />
+					 <path  d="m12.054,6.6104,5.2402,5.3664-5.2887,5.3642"/>
+					</svg></span>
+			</p>
+			
+
+			<p>For years, Facebook has ignored pleas to add a clickable thumbs-down icon. Maybe this is why.That week, Facebook conducted a little experiment. Its robots trolled the news feeds of the users in that sample, tinkered with them to reduce the number of positive or negative posts, then studied the users' own entries for signs of "emotional contagion." They wanted to see if reducing the positives (or negatives) in your news feed made you feel less positive (or negative).</p>
 		</div><!-- end #paginated-content -->
 
 </div>
@@ -382,7 +395,10 @@
 		</div><!-- end #tab1 -->
 
 		<div class="tabIntContent" id="tab2">
-			
+			<!--<div id="logIn">
+				<img src="images/login.png" alt="logIn"> </div>-->
+
+
 				    <img src="images/addpersonalexplore.png" alt="Add">
 
 				<div id="sortable">
@@ -417,20 +433,7 @@
 		<p class="artTitle">Where's the 'dislike' button?</p>
 		<hr class="linesExSection">
 
-  <h id="hedingTrendingVoices">Trending Voices</h>
-  <div id="container-div-trending-voices">
-    <div id="trending-voices-div" >
-    	<img src="images/voice-1.png" alt="TrendingDiscussion">
-    	<img src="images/voice-2.png" alt="TrendingDiscussion">
-    	<img src="images/voice-3.png" alt="TrendingDiscussion">
-    	<img src="images/voice-2.png" alt="TrendingDiscussion">
-    	<img src="images/voice-1.png" alt="TrendingDiscussion">
-    </div>
-  </div>
-
-
-
-		<!--<img src="images/trendingv.png" alt="TrendingDiscussion">-->
+		<img src="images/trendingv.png" alt="TrendingDiscussion">
 
 		<h2 id="presult"> Poll Results </h2>
 		<span class="resultsNo" id="No" >
