--- a/prototype.html
+++ b/prototype.html
@@ -525,7 +525,7 @@
 
 <!-- Beginning of the banner function -->
 
-	<p id="banner">Log in to view your 'Year in News' and personalize your own 'Explore'!</p>
+	<p id="banner">Sign up to view your 'Year in News' and personalize your own 'Explore'!</p>
 
 
 <!--<script>
