--- a/prototype.html
+++ b/prototype.html
@@ -214,8 +214,8 @@
 		<span class="pollOptions">No</span>
 		<span class="pollOptions">Yes</span>
 		<span class="results" id="Yes" >
-			<p id="left">67% No</p>
-			<p id="right"> 33% Yes</p>
+			<p class="left">67% No</p>
+			<p class="right"> 33% Yes</p>
 		</span>
 	<!--<input type="button" name="answer" value="Yes"></input>
 	<input type="button" name="answer" value="No"></input>-->
@@ -412,7 +412,7 @@
 
 	<div id="heading-div-discussion">
 
-		<h id="headingDiscussion">DISCUSSION</h>
+		<h1 id="headingDiscussion">DISCUSSION</h1>
 
 		<p class="artTitle">Where's the 'dislike' button?</p>
 		<hr class="linesExSection">
@@ -424,18 +424,17 @@
     	<img src="images/voice-2.png" alt="TrendingDiscussion">
     	<img src="images/voice-3.png" alt="TrendingDiscussion">
     	<img src="images/voice-2.png" alt="TrendingDiscussion">
-    	<img src="images/voice-1.png" alt="TrendingDiscussion">
     </div>
   </div>
 
 
-
-		<!--<img src="images/trendingv.png" alt="TrendingDiscussion">-->
-
-		<h2 id="presult"> Poll Results </h2>
-		<span class="resultsNo" id="No" >
-			<p id="left">67% No</p>
-			<p id="right"> 33% Yes</p>
+	<div id="discussion-poll">
+	<hr class="lines">
+	<h2 class="subheader">POLL</h2>
+		<span id="question">Do you find Facebook's privacy settings clear in relation to the collection and use of data by Facebook itself or by third-parties?</span>
+		<span class="discussion-results" id="discussion-Yes" >
+			<p class="left">67% No</p>
+			<p class="right"> 33% Yes</p>
 		</span>
 
 		<img src="images/commentsonly.png" alt="CommentsDiscussion">
