adjusted discussion stylng heading

--- a/prototype.html
+++ b/prototype.html
@@ -415,11 +415,12 @@
 
 		<h1 id="headingDiscussion">DISCUSSION</h1>
 
-		<p class="artTitle">Where's the 'dislike' button?</p>
 		<hr class="linesExSection">
 	</div>
 
+	<p class="artTitle">Where's the 'dislike' button?</p>
 
+<hr class="lines">
   <h1 class="subheader">Trending Voices</h1>
   <div id="container-div-trending-voices">
     <div id="trending-voices-div" >
@@ -432,7 +433,7 @@
 
 
 	<div id="discussion-poll">
-	<!--<hr class="lines">-->
+	<hr class="lines">
 	<h2 class="subheader">POLL</h2>
 		<span id="question">Do you find Facebook's privacy settings clear in relation to the collection and use of data by Facebook itself or by third-parties?</span>
 		<span class="discussion-results" id="discussion-Yes" >
