added buttons to the trending voices slider

--- a/prototype.html
+++ b/prototype.html
@@ -424,8 +424,11 @@
 
 	<p class="artTitle">Where's the 'dislike' button?</p>
 
+<div id="Trending-Voice-Container">	
+
 <hr class="lines">
   <h1 class="subheader">Trending Voices</h1>
+    <button id="trending-voice-button-left"><</button>
   <div id="container-div-trending-voices">
     <div id="trending-voices-div" >
     	<img src="images/voice-1.png" alt="TrendingDiscussion">
@@ -434,6 +437,9 @@
     	<img src="images/voice-2.png" alt="TrendingDiscussion">
     </div>
   </div>
+  <button id="trending-voice-button-right">></button>
+
+ </div> 
 
 
 	<div id="discussion-poll">
@@ -446,7 +452,7 @@
 		</span>
 	</div>	
 
-		<img src="images/commentsonly.png" alt="CommentsDiscussion">
+		<img id="comments-img" src="images/commentsonly.png" alt="CommentsDiscussion">
 		
 
 	</div><!-- end #discussion -->
