--- a/prototype.html
+++ b/prototype.html
@@ -423,7 +423,7 @@
 <div id="Trending-Voice-Container">	
 
 <hr class="lines">
-  <h1 class="subheader">Trending Voices</h1>
+  <h1 class="subheader">TRENDING VOICES</h1>
     <button id="trending-voice-button-left"><</button>
   <div id="container-div-trending-voices">
     <div id="trending-voices-div" >
