added the next function for the trending vocies

--- a/prototype.html
+++ b/prototype.html
@@ -424,7 +424,8 @@
 
 <hr class="lines">
   <h1 class="subheader">Trending Voices</h1>
-    <button id="trending-voice-button-left"><</button>
+<input type="checkbox" id="button">
+<label class="trending-voice-button-left" for="button"><</label>
   <div id="container-div-trending-voices">
     <div id="trending-voices-div" >
     	<img src="images/voice-1.png" alt="TrendingDiscussion">
@@ -433,7 +434,8 @@
     	<img src="images/voice-2.png" alt="TrendingDiscussion">
     </div>
   </div>
-  <button id="trending-voice-button-right">></button>
+  <input type="checkbox" id="button">
+<label class="trending-voice-button-right" for="button">></label>
 
  </div> 
 
