--- a/prototype.html
+++ b/prototype.html
@@ -443,7 +443,7 @@
 
 	<div id="discussion-poll">
 	<hr class="lines">
-	<h2 class="subheader">POLL</h2>
+	<h2 class="subheader">Poll results</h2>
 		<span id="question">Do you find Facebook's privacy settings clear in relation to the collection and use of data by Facebook itself or by third-parties?</span>
 		<span class="discussion-results" id="discussion-Yes" >
 			<p class="left">67% No</p>
