trying JS interaction message link to news updates

--- a/prototype.html
+++ b/prototype.html
@@ -35,6 +35,12 @@
 
 	<script src="js/jquery.touchSwipe.min.js"></script>
 
+
+
+	<script src="jquery.localscroll.js" type="text/javascript"></script> 
+	<script src="jquery.scrollTo.js" type="text/javascript"></script> 
+
+
 </head>
 
 <body>
@@ -233,7 +239,7 @@
   </div>
 
 
-<div id="newsUpdate">
+<div id="newsUpdate" a href="#linkUpdate">
 	<hr class="linesUpdate">
 	<span class="subheaderUpdate">Get Personalized News Updates</span>
 	<p id="newUpdateText">Select your preferred topics, the day you would like to receive the updates, and in which medium.</p>
