--- a/prototype.html
+++ b/prototype.html
@@ -144,38 +144,38 @@
 <a name="top"></a>
 
 <div class="tabContent" id="article">
-	<div id="heading-div-article">
-		<h2 id="headingArticle">ARTICLE</h2>
-		<hr class="linesExSection">
+		<div id="heading-div-article">
+			<h2 id="headingArticle">ARTICLE</h2>
+			<hr class="linesExSection">
    	</div>
 
  <div class="title-header">
-	<h2 id="title">Where's the 'dislike' button?</h2>
-	<span class="meta">Alex Hern @alexhern <br/> Friday 22 April 2016 11.50 BST</span>
+		<h2 id="title">Where's the 'dislike' button?</h2>
+		<span class="meta">Alex Hern @alexhern <br/> Friday 22 April 2016 11.50 BST</span>
 
-<!--SVG for the audio button ' listen to the article'-->
+		<!--SVG for the audio button ' listen to the article'-->
 		<span class= "options" id="listen" >
-		<span id="off" class="listen-switch">
-		  <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-					<svg  xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="30" width="30"  viewbox="0 0 30 30" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
-					  <path  d="m10.746,2.3376c-0.129-0.072-0.287-0.072-0.414,0.008l-6.782,4.07h-2.64c-0.227,0-0.41,0.184-0.41,0.409v5.505c0,0.226,0.184,0.41,0.41,0.41h2.639l6.784,4.07c0.064,0.039,0.138,0.059,0.21,0.059,0.069,0,0.14-0.018,0.202-0.053,0.129-0.074,0.208-0.211,0.208-0.357v-13.764c0.001-0.146-0.078-0.282-0.207-0.357z"/>
-					 <path  d="m3.1788,6.7793,0,5.8482" />
-					</svg>
-		</span>
-		<span id="on"> <!-- svg with the volume up elements-->
-			<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-					<svg height="30" width="30"  viewbox="0 0 30 30" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
-					 <path style="fill:#008080;" d="m10.746,2.3376c-0.129-0.072-0.287-0.072-0.414,0.008l-6.782,4.07h-2.64c-0.227,0-0.41,0.184-0.41,0.409v5.505c0,0.226,0.184,0.41,0.41,0.41h2.639l6.784,4.07c0.064,0.039,0.138,0.059,0.21,0.059,0.069,0,0.14-0.018,0.202-0.053,0.129-0.074,0.208-0.211,0.208-0.357v-13.764c0.001-0.146-0.078-0.282-0.207-0.357z"/>
-					 <path  d="m12.777,5.2168c1.4505,3.0655,1.8715,6.131,0,9.1964" />
-					 <path  d="m3.1788,6.7793,0,5.8482" />
-					 <path  d="m14.996,2.0785c0.72525,1.5328,2.333,4.0071,2.4682,7.0102,0.13523,3.003-1.4664,6.6669-2.4022,8.1996"/>
-					 <path d="m17.639,0.5c1.1878,1.4667,2.306,3.8594,2.6168,4.9947,0.08264,0.30185,0.45652,1.9751,0.46915,3.6563s-0.22033,3.3374-0.32691,3.8032c-0.32733,1.4308-1.6304,4.9627-2.0983,5.7291" />
-					</svg>
-			</span>
+				<span id="off" class="listen-switch">
+				  <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+							<svg  xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="30" width="30"  viewbox="0 0 30 30" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
+							  <path  d="m10.746,2.3376c-0.129-0.072-0.287-0.072-0.414,0.008l-6.782,4.07h-2.64c-0.227,0-0.41,0.184-0.41,0.409v5.505c0,0.226,0.184,0.41,0.41,0.41h2.639l6.784,4.07c0.064,0.039,0.138,0.059,0.21,0.059,0.069,0,0.14-0.018,0.202-0.053,0.129-0.074,0.208-0.211,0.208-0.357v-13.764c0.001-0.146-0.078-0.282-0.207-0.357z"/>
+							 <path  d="m3.1788,6.7793,0,5.8482" />
+							</svg>
+				</span>
+				<span id="on"> <!-- svg with the volume up elements-->
+					<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+							<svg height="30" width="30"  viewbox="0 0 30 30" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
+							 <path style="fill:#008080;" d="m10.746,2.3376c-0.129-0.072-0.287-0.072-0.414,0.008l-6.782,4.07h-2.64c-0.227,0-0.41,0.184-0.41,0.409v5.505c0,0.226,0.184,0.41,0.41,0.41h2.639l6.784,4.07c0.064,0.039,0.138,0.059,0.21,0.059,0.069,0,0.14-0.018,0.202-0.053,0.129-0.074,0.208-0.211,0.208-0.357v-13.764c0.001-0.146-0.078-0.282-0.207-0.357z"/>
+							 <path  d="m12.777,5.2168c1.4505,3.0655,1.8715,6.131,0,9.1964" />
+							 <path  d="m3.1788,6.7793,0,5.8482" />
+							 <path  d="m14.996,2.0785c0.72525,1.5328,2.333,4.0071,2.4682,7.0102,0.13523,3.003-1.4664,6.6669-2.4022,8.1996"/>
+							 <path d="m17.639,0.5c1.1878,1.4667,2.306,3.8594,2.6168,4.9947,0.08264,0.30185,0.45652,1.9751,0.46915,3.6563s-0.22033,3.3374-0.32691,3.8032c-0.32733,1.4308-1.6304,4.9627-2.0983,5.7291" />
+							</svg>
+					</span>
 			</span>
 			<span class= "options"  id="saveLater">
-<!-- SVG for the save for later button-->
-		  <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+				<!-- SVG for the save for later button-->
+		  	<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 					<!-- Created with Inkscape (http://www.inkscape.org/) -->
 					<svg xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="30" width="30" version="1.1" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/" viewbox="0 0 40 40">
 					<path d="m14.689,0.4849-13.768,0c-0.227,0-0.41,0.184-0.41,0.41v22.023c0,0.166,0.1,0.314,0.252,0.377,0.156,0.069,0.33,0.029,0.449-0.088l1.371-1.372c0.004-0.001,0.004-0.003,0.006-0.005l5.215-5.213,6.594,6.59c0.078,0.078,0.182,0.12,0.291,0.12,0.051,0,0.104-0.01,0.156-0.032,0.152-0.062,0.252-0.211,0.252-0.377v-22.023c0-0.226-0.183-0.41-0.408-0.41z" />
@@ -183,7 +183,7 @@
 			</span>
 	</div> <!-- End .title-header-->
 
-<div id="mainArticlePage">
+<!-- <div id="mainArticlePage"> -->
 		<div id="paginated-content">
 			<p class="lead">Facebook messes with our minds; Facebook's 'emotional contagion' experiment makes users really mad.</p>
 			<p>What was going on in your Facebook news feed the week of Jan. 11-18, 2012? Birthday reminders, cat videos, crockpot recipes, baby pictures and invitations to play Bejeweled Blitz, probably, plus lots of current events posts were guaranteed to make you glad or mad. That week, Mitt Romney won New Hampshire's Republican primary, Playboy announced it was leaving Chicago, and Hostess filed for bankruptcy, prompting fears that there would be no more Twinkies.
@@ -194,14 +194,23 @@
 <!-- </div> -->
 
 		 <div id="img-gallery">
-			<!-- all images should have the same size/proportion otherwise it does not look good (personal thought) -->
-			<img class="article-img" src="images/article-01.jpg" />
-			<img class="article-img" src="images/article-02.jpg" />
-			<img class="article-img" src="images/article-03.jpg" />
-			<p class="imgnr">1/3</p>
+			<!-- all images should have the same size/proportion  -->
+			<div class="article-img">
+				<img src="images/article-01.jpg" />
+				<p class="imgnr">1/3</p>
+			</div>
+			<div class="article-img">
+				<img src="images/article-02.jpg" />
+				<p class="imgnr">1/3</p>
+			</div>
+			<div class="article-img">
+				<img src="images/article-03.jpg" />
+				<p class="imgnr">1/3</p>
+			</div>
+			<!-- <p class="imgnr">1/3</p> -->
 
 		 </div> <!-- end article img-gallery -->
-</div><!-- end mainArticlePage -->
+<!-- </div>--><!-- end mainArticlePage -->
 
 			<div id="belowarticle">
 
