--- a/prototype.html
+++ b/prototype.html
@@ -35,10 +35,7 @@
 
 	<script src="js/jquery.touchSwipe.min.js"></script>
 
-
-
-	<script src="jquery.localscroll.js" type="text/javascript"></script>
-	<script src="jquery.scrollTo.js" type="text/javascript"></script>
+	<script src="js/jquery.scrollTo.min.js" type="text/javascript"></script>
 
 
 </head>
@@ -233,7 +230,7 @@
 			  </div><!-- #relatedArticles -->
 
 
-				<div id="newsUpdate" a href="#linkUpdate">
+				<div id="newsUpdate">
 					<hr class="linesUpdate">
 					<span class="subheaderUpdate">Get Personalized News Updates</span>
 					<p id="newUpdateText">Select your preferred topics, the day you would like to receive the updates, and in which medium.</p>
