--- a/prototype.html
+++ b/prototype.html
@@ -533,7 +533,7 @@
 <!-- Beginning of the banner function -->
 
 
-	<p id="banner">Sign up to view your <span class="linkYin">'Year in News'</span> and personalize your own <span class="linkPEx">'Explore'!</span><br><i class="fa fa-times-circle" aria-hidden="true"></i></p>
+	<p id="banner">Sign up to view your <span class="linkPEx">'Year in News'</span> and personalize your own <span class="linkPEx">'Explore'!</span><br><i class="fa fa-times-circle" aria-hidden="true"></i></p>
 
 
 
