photo number added via js

--- a/prototype.html
+++ b/prototype.html
@@ -183,17 +183,16 @@
 			<!-- all images should have the same size/proportion  -->
 			<div class="article-img">
 				<img src="images/article-01.jpg" />
-				<p class="imgnr">1/3</p>
+				<p class="imgnr"> </p>
 			</div>
 			<div class="article-img">
 				<img src="images/article-02.jpg" />
-				<p class="imgnr">1/3</p>
+				<p class="imgnr"> </p>
 			</div>
 			<div class="article-img">
 				<img src="images/article-03.jpg" />
-				<p class="imgnr">1/3</p>
+				<p class="imgnr"> </p>
 			</div>
-			<!-- <p class="imgnr">1/3</p> -->
 
 		 </div> <!-- end article img-gallery -->
 <!-- </div>--><!-- end mainArticlePage -->
