html text banner (usual reader message)

--- a/prototype.html
+++ b/prototype.html
@@ -519,7 +519,7 @@
 	</a>
 
 <!-- Beginning of the banner function -->
-<p id="banner">Sign up to view your <span class="linkPEx">'Year in News'</span> and personalize your own <span class="linkPEx">'Explore'!</span><br><i class="fa fa-times-circle" aria-hidden="true"></i></p>
+<p id="banner">Check updates on your <span class="linkPEx">'Year in News'</span> and personalize your own <span class="linkPEx">'Explore'!</span><br><i class="fa fa-times-circle" aria-hidden="true"></i></p>
 
 <script src="js/script.js"></script>
 
