minor changes/cleanup in css, fixed textPage size/position, added blockPage, fixed numPage css, restored imgGallery swipe

--- a/prototype.html
+++ b/prototype.html
@@ -155,7 +155,7 @@
 	
 		<div id="img-gallery">
 		       <!-- all images should have the same size/proportion  -->
-		       <div class="article-img">
+		       <div class="article-img topPhoto">
 			       <img src="images/article-01.jpg" />
 			       <p class="imgnr"> </p>
 		       </div>
@@ -174,7 +174,7 @@
 			<div id="poll">
 				<hr class="lines">
 				<h2 class="subheader">POLL</h2>
-					<span id="question">Do you find Facebook's privacy settings clear in relation to the collection and use of data by Facebook itself or by third-parties?</span>
+					<p id="question">Do you find Facebook's privacy settings clear in relation to the collection and use of data by Facebook itself or by third-parties?</p>
 					<span class="pollOptions">No</span>
 					<span class="pollOptions">Yes</span>
 					<span class="results" id="Yes" >
@@ -425,12 +425,16 @@
 			<li>Imprint</li>
 			<li>Terms and Conditions</li>
 			<li>About</li>
-			<li id="love">Made with
+			<!--<li id="love">Made with
 				<svg class="footer-svg" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="20" width="20" viewbox="0 0 23 25" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
 					<path d="M16.152,0.5c-1.505,0-3.001,1.394-4.23,2.242-1.215-0.838-2.62-2.242-4.102-2.242-1.955,0-3.792,0.762-5.172,2.144-1.385,1.385-2.148,3.227-2.148,5.185,0,1.959,0.764,3.801,2.129,5.165l9.356,10.688,9.339-10.668c2.859-2.858,2.859-7.51,0.002-10.369-1.382-1.383-3.22-2.145-5.174-2.145z" style="stroke-width:1px;"/>
-				</svg> in Amsterdam</li>
+				</svg> in Amsterdam</li>-->
 
 		</ul>
+		<p id="love">Made with
+			<svg class="footer-svg" xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="20" width="20" viewbox="0 0 23 25" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
+				<path d="M16.152,0.5c-1.505,0-3.001,1.394-4.23,2.242-1.215-0.838-2.62-2.242-4.102-2.242-1.955,0-3.792,0.762-5.172,2.144-1.385,1.385-2.148,3.227-2.148,5.185,0,1.959,0.764,3.801,2.129,5.165l9.356,10.688,9.339-10.668c2.859-2.858,2.859-7.51,0.002-10.369-1.382-1.383-3.22-2.145-5.174-2.145z" style="stroke-width:1px;"/>
+			</svg> in Amsterdam</p>
 	   </div><!-- #footer-->
 	
 	
