new article. html text and images

--- a/prototype.html
+++ b/prototype.html
@@ -118,8 +118,8 @@
 		</div>
 	
 		<div class="title-header">
-			<h2 id="title" class="main-title">'Blue magic': Algeria opens 'Facebook addiction' clinic </h2>
-			<span class="meta">Alex Hern @alexhern <br/> Friday 22 April 2016 11.50 BST</span>
+			<h2 id="title" class="main-title">Artificial intelligence: ‘We’re like children playing with a bomb’</h2>
+			<span class="meta">Tim Adams @TimAdamsWrites <br/> Sunday 12 June 2016 08.30 BST</span>
 			<span class= "options" id="listen" >
 				<span id="off" class="listen-switch">
 					<?xml version="1.0" encoding="UTF-8" standalone="no"?>
@@ -148,9 +148,10 @@
 		</div> <!-- End .title-header-->
 	
 		<div id="paginated-content">
-<p class="lead">When someone says they're an addict, people usually think drugs or alcohol, or maybe even porn, but the fight for some is with Facebook and the people of Algeria have made a stand by opening a clinic to help people overcome the addiction.</p>
-<p>Algeria joins a growing list of countries around the world to open such a clinic in the hope of helping those with a "Facebook dependency." The private clinic opened in May in the eastern city of Constantine with a number of addiction specialists and psychologists leading treatments, according to The New Arab.</p>
-<p>"There is some danger in underestimating the damage of Facebook addiction compared to the risk of physical drugs," said Human development scientist Raouf Boqafa, director of the clinic. The North African country has around 10 million Facebook users, which is about 25 percent of the population, and the number of users is growing by around 10 percent year on year.<br>While such interest in the social network is not uncommon, Boqafa is of the belief that Facebook poses a greater danger than the use of "black magic." Describing the effects of addiction as the cause of "blue magic... the magic of Facebook and the wider internet," Boqafa's treatment programme aims to "reduce the psychological, social, and security damage experienced by one who lives in the virtual world."<br>As well as becoming more removed from the "real world," Boqafa says that "Facebook addicts" are more susceptible to being brainwashed by extremists groups who use the web as a recruitment tool.</p>
+<p class="lead">Sentient machines are a greater threat to humanity than climate change, according to Oxford philosopher Nick Bostrom.</p>
+<p>You’ll find the Future of Humanity Institute down a medieval backstreet in the centre of Oxford. It is beside St Ebbe’s church, which has stood on this site since 1005, and above a Pure Gym, which opened in April. The institute, a research faculty of Oxford University, was established a decade ago to ask the very biggest questions on our behalf.</p>
+<p>Notably: what exactly are the “existential risks” that threaten the future of our species; how do we measure them; and what can we do to prevent them? Or to put it another way: in a world of multiple fears, what precisely should we be most terrified of? When I arrive to meet the director of the institute, Professor Nick Bostrom, a bed is being delivered to the second-floor office. Existential risk is a round-the-clock kind of operation; it sleeps fitfully, if at all.Bostrom, a 43-year-old Swedish-born philosopher, has lately acquired something of the status of prophet of doom among those currently doing most to shape our civilisation: the tech billionaires of Silicon Valley.</p>
+<p>His reputation rests primarily on his book Superintelligence: Paths, Dangers, Strategies, which was a surprise New York Times bestseller last year and now arrives in paperback, trailing must-read recommendations from Bill Gates and Tesla’s Elon Musk. (In the best kind of literary review, Musk also gave Bostrom’s institute £1m to continue to pursue its inquiries.)</p>
 		</div><!-- end #paginated-content -->
 	
 	
@@ -175,7 +176,7 @@
 			<div id="poll">
 				<hr class="lines">
 				<h2 class="subheader">POLL</h2>
-					<p id="question">Do you find Facebook's privacy settings clear in relation to the collection and use of data by Facebook itself or by third-parties?</p>
+					<p id="question">Do you think that concerns about AI will take over from global warming as a more imminent threat any time soon?</p>
 					<div id="pollOptionsWrapper">
 					<span class="pollOptions">
 						
@@ -214,7 +215,7 @@
 					<li><a href="#where">Where</a></li>
 				</ul>
 				<div class="tabUpdContent" id="what">
-					<span>A.Hern</span> <span>Facebook</span> <span>Privacy</span> <span>Culture</span> <span>Politics</span> <span>Technology</span> <span id= "more">More...</span>
+					<span>T.Adams</span> <span>AI</span> <span>Tech</span> <span>Culture</span> <span>Science</span> <span>N.Bostrom</span> <span id= "more">More...</span>
 					<div class="NewsUpdate-check">
 						<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 						<svg xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns="http://www.w3.org/2000/svg" height="30" width="30"  viewbox="0 0 30 30" xmlns:cc="http://creativecommons.org/ns#" xmlns:dc="http://purl.org/dc/elements/1.1/">
@@ -370,7 +371,7 @@
 		</div>
 	
 		<!--<p class="artTitle">'Blue magic': Algeria opens 'Facebook addiction' clinic </p>-->
-		<h2 id="title" class="main-title">'Blue magic': Algeria opens 'Facebook addiction' clinic </h2>
+		<h2 id="title" class="main-title">Artificial intelligence: ‘We’re like children playing with a bomb’</h2>
 	
 		<div id="Trending-Voice-Container">
 	
@@ -402,7 +403,7 @@
 		<div id="discussion-poll">
 			<hr class="lines">
 			<h2 class="subheader">Poll results</h2>
-			<span id="question">Do you find Facebook's privacy settings clear in relation to the collection and use of data by Facebook itself or by third-parties?</span>
+			<span id="question">Do you think that concerns about AI will take over from global warming as a more imminent threat any time soon?</span>
 			<div class="discussion-results" id="discussion-Yes" >
 				<p class="left">67% No</p>
 				<p class="right"> 33% Yes</p>
