--- a/prototype.html
+++ b/prototype.html
@@ -480,7 +480,7 @@
 	
 	<!--<p id="banner"><i class="fa fa-times-circle close-banner" aria-hidden="true" ></i>Check updates on your <span class="linkPEx">'Year in News'</span> and personalize your own <span class="linkPEx">'Explore'!</span></p>-->
 	
-	<p id="banner"><i class="fa fa-times-circle close-banner" aria-hidden="true" ></i>Check your <span class="linkPEx">YEAR IN NEWS</span>!</p>
+	<p id="banner"><i class="fa fa-times-circle close-banner" aria-hidden="true" ></i>Sign up for your <span class="linkPEx">YEAR IN NEWS</span>!</p>
 	
 	<script src="js/script.js"></script>
 	
